--- a/sass/site/compatibility/edd.scss
+++ b/sass/site/compatibility/edd.scss
@@ -591,7 +591,7 @@ a.edd-add-to-cart .edd-add-to-cart-label, .edd-loading {
 
 .edd-cart-added-alert {
 	position: static;
-	display: block;
+	display: inline-block;
 	font-size: 1em;
 	.edd-icon-check {
 		max-width: 18px;
